--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                         <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
-                        <span class="span-position"><a class="fontLatoRegular resources" href="https://www.crayond.com/blog" target="_blank">Resources</a>
+                        <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                             <div class="dropdown">
                                 
-                                <a id="blog">Blog</a>
-                                <a id="glossary" href="productdetails.html">Glossary</a>
+                                <a id="blog" href="https://www.crayond.com/blog"><img src="./images/blog.svg" style="height: 20px;width: 20px;margin-right: 2px;" class="img-fluid" alt="" > Blog</a>
+                                <a id="glossary" href="productdetails.html"><img src="./images/Glossary.svg" style="height: 20px;width: 22px;"  class="img-fluid" alt=""> Glossary</a>
                             </div>
                         </span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
@@ -133,8 +133,8 @@
             </li>
             <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
-            <li  class="sub-menu"><a href="">Blog</a></li>
-            <li  class="sub-menu"><a href="">Glossary</a></li>
+            <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
+            <li  class="sub-menu"><a href="productdetails.html">Glossary</a></li>
             
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
