--- a/opportunities.html
+++ b/opportunities.html
@@ -79,73 +79,82 @@
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- loader section -->
-    <!-- <section id="pre-loader">
-        <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
-    </section> -->
-    <!-- Main header -->
-    <div class="header transparent_header" id="navBar" >
-        <div class="container">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 " >
-                <div class="row">
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
-                        <a href="/" class="logo logo_white" alt="crayond" ><img alt="logo-crayond" src="./images/crayond_logo_light.png"/>&nbsp;</a>
-                        <a href="/" class="logo logo_black" style="display: none;" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.png"/>&nbsp;</a>
-                    </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
-                        <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
-                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
-                        <span><a class="fontLatoRegular" href="https://www.crayond.com/blog" target="_blank">Blog</a></span>
-                        <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
-                    </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
-                        <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="header_mobile" style="display: none;">
-        <div class="crayond_logo_mobile">
-            <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.png"/>&nbsp;</a>
-        </div>
-        <div class="icon-container">
-            <div id="menuicon">
-            <div class="bar bar1"></div>
-            <div class="bar bar2"></div>
-            </div>
-        </div>
-        <div class="mobile-menu">
-            <ul class="menu">
-            <li class="menu-item"><a href="./who-we-are">Who We Are</a>
-            </li>
-            <li class="menu-item"><a href="./ourapproach">Our Approach</a>
-            </li>
-            <li class="menu-item"><a href="./opportunities">Opportunities</a>
-            </li>
-            <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
-            </li>
-            <li class="menu-item"><a href="https://www.crayond.com/blog" target="_blank">Blog</a>
-            </li>
-            <li class="menu-item"><a href="./contact">Contact</a>
-            </li>
-            <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
-                <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
-            </li> -->
-            </ul>
-            <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
-                <li class="menu-item">
-                    <a>
-                      <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+     <!-- Google Tag Manager (noscript) -->
+     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+     <!-- End Google Tag Manager (noscript) -->
+     <!-- loader section -->
+     <!-- <section id="pre-loader">
+         <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
+     </section> -->
+     <!-- Main header -->
+     <div class="header" id="navBar">
+         <div class="container">
+             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
+                 <div class="row">
+                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
+                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+                     </div>
+                     <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
+                         <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
+                         <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
+                         <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
+                             <div class="dropdown">
+                                 
+                                 <a id="blog" href="https://www.crayond.com/blog"><img src="./images/blog.svg" style="height: 20px;width: 20px;margin-right: 2px;" class="img-fluid" alt="" > Blog</a>
+                                 <a id="glossary" href="productdetails.html"><img src="./images/Glossary.svg" style="height: 20px;width: 22px;"  class="img-fluid" alt=""> Glossary</a>
+                             </div>
+                         </span>
+                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
+                     </div>
+                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-3 sign_btn">
+                         <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </div>
+  
+     <div class="header_mobile" style="display: none;">
+         <div class="crayond_logo_mobile">
+             <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
+         </div>
+         <div class="icon-container">
+             <div id="menuicon">
+             <div class="bar bar1"></div>
+             <div class="bar bar2"></div>
+             </div>
+         </div>
+         <div class="mobile-menu">
+             <ul class="menu">
+             <li class="menu-item"><a href="./who-we-are">Who We Are</a>
+             </li>
+             <li class="menu-item"><a href="./ourapproach">Our Approach</a>
+             </li>
+             <li class="menu-item"><a href="./opportunities">Opportunities</a>
+             </li>
+             <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
+             </li>
+             <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
+             </li>
+             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
+             <li  class="sub-menu"><a href="productdetails.html">Glossary</a></li>
+             
+             <li class="menu-item"><a href="./contact">Contact</a>
+             </li>
+             <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
+                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
+             </li> -->
+             </ul>
+             <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
+                 <li class="menu-item">
+                     <a>
+                       <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
+                     </a>
+                 </li>
+             </ul>
+         </div>
+     </div>
     <!-- end -->
 
     <header>
