--- a/productdetails.html
+++ b/productdetails.html
@@ -63,6 +63,7 @@
 
     <!-- css  -->
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles//productdetailsstyles/productstyles.scss">
 
     <!-- HTML5 Shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -105,7 +106,7 @@
                              <div class="dropdown">
                                  
                                  <a id="blog" href="https://www.crayond.com/blog"><img src="./images/blog.svg" style="height: 20px;width: 20px;margin-right: 2px;" class="img-fluid" alt="" > Blog</a>
-                                 <a id="glossary" href="productdetails.html"><img src="./images/Glossary.svg" style="height: 20px;width: 22px;"  class="img-fluid" alt=""> Glossary</a>
+                                 <a id="glossary" href="productdetails.html"><img src="./images/Glossary.svg" style="height: 20px;width: 22px;"  class="img-fluid active" alt=""> Glossary</a>
                              </div>
                          </span>
                          <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
