--- a/products.html
+++ b/products.html
@@ -122,8 +122,8 @@ input:focus:invalid {
                            <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                                <div class="dropdown">
                                    
-                                <a id="blog" href="https://www.crayond.com/blog"><img src="./images/blog.svg" style="height: 20px;width: 20px;margin-right: 2px;" class="img-fluid" alt="" > Blog</a>
-                                <a id="glossary" href="productdetails.html"><img src="./images/Glossary.svg" style="height: 20px;width: 22px;"  class="img-fluid" alt=""> Glossary</a>
+                                <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
+                                <a id="glossary" href="productdetails.html"> Glossary</a>
                                </div>
                            </span>
                            <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
