--- a/productdetails.html
+++ b/productdetails.html
@@ -105,8 +105,8 @@
                          <span class="span-position"><a class="fontLatoRegular resources"  target="_blank">Resources</a>
                              <div class="dropdown">
                                  
-                                 <a id="blog" href="https://www.crayond.com/blog"><img src="./images/blog.svg" style="height: 20px;width: 20px;margin-right: 2px;" class="img-fluid" alt="" > Blog</a>
-                                 <a id="glossary" href="productdetails.html"><img src="./images/Glossary.svg" style="height: 20px;width: 22px;"  class="img-fluid active" alt=""> Glossary</a>
+                                 <a id="blog" href="https://www.crayond.com/blog">Blog</a>
+                                 <a id="glossary" href="productdetails.html"> Glossary</a>
                              </div>
                          </span>
                          <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
@@ -162,8 +162,10 @@
     <!-- end -->
     <!--Product Defined-->
     <div class="container-fluid text-center product-head">
-        <h1>Product Defined</h1>
-        <h3 id="scroll">Create, prototype, collaborate and turn your ideas into product with Crayond</h3>
+        <h1>Sass Glossary</h1>
+        <h3 id="scroll">
+            <!-- Create, prototype, collaborate and turn your ideas into product with Crayond -->
+        </h3>
     </div>
     <div class="search-bar d-flex">
         <!-- <i class="fas fa-search icon"></i> -->
@@ -269,6 +271,30 @@
                     </ul> -->
                 </div>
             </div>
+            <div class = "row footer_social_media1  ">
+                <div class = "col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link" style="display: flex;justify-content: flex-start;">
+                    <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                        <samp class="social_icon">
+                         <i class="fa fa-linkedin " aria-hidden="true"></i>
+                        </samp>
+                    </a>
+                    <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                        <samp class="social_icon">
+                         <i class="fa fa-facebook " aria-hidden="true"></i>
+                        </samp>
+                    </a>
+                    <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;">
+                        <samp class="social_icon">
+                         <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                        </samp>
+                    </a>
+                    <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                        <samp class="social_icon">
+                         <i class="fa fa-twitter " aria-hidden="true"></i>
+                        </samp>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
     <!-- end -->
@@ -282,32 +308,19 @@
                             <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
                             <p class="fontLatoBold footer_list"><span>GDPR</span></p>
                         </div> -->
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
-                        style="display: flex;justify-content: flex-start;">
-                        <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"
-                            style="text-decoration: none;">
-                            <samp class="social_icon">
-                                <i class="fa fa-linkedin " aria-hidden="true"></i>
-                            </samp>
-                        </a>
-                        <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook"
-                            style="text-decoration: none;">
-                            <samp class="social_icon">
-                                <i class="fa fa-facebook " aria-hidden="true"></i>
-                            </samp>
-                        </a>
-                        <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram"
-                            style="text-decoration: none;">
-                            <samp class="social_icon">
-                                <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                            </samp>
-                        </a>
-                        <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter"
-                            style="text-decoration: none;">
-                            <samp class="social_icon">
-                                <i class="fa fa-twitter " aria-hidden="true"></i>
-                            </samp>
-                        </a>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link">
+                        <div class="col-lg-7" style="display: flex;justify-content: space-between;">
+                            <div class="privacy">
+                                <a href="privacy.html" style="color: #43434b;" target="__blank">
+                                    <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px auto;font-size: 16px;font-weight: 600;">Privacy</p>
+                                </a>
+                            </div>
+                            <div class="gdpr">
+                                <a href="GDPR.html" style="color: #43434b;" target="__blank">
+                                    <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px auto;font-size: 16px;font-weight: 600;">GDPR</p>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                         <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
@@ -321,11 +334,11 @@
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address">
                         <p class="fontGraphikRegular"
-                            style="border: none; margin-top: 19px;margin-bottom: 10px;text-align: left;"> 105, South
+                            style="border: none; margin-top: 5px;margin-bottom: 5px;text-align: left;"> 105, South
                             West Boag Road, T.Nagar Chennai, India</p>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
-                        style="display: flex;justify-content: flex-start; display: none;">
+                        style="display: flex;justify-content: flex-start; display: none;margin-left: 12px;">
                         <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin"
                             style="text-decoration: none;">
                             <samp class="social_icon">
