--- a/index.html
+++ b/index.html
@@ -718,8 +718,7 @@
                                 <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
                                 <p class="fontLatoBold footer_list"><span>GDPR</span></p>
                             </div> -->
-                            <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
-                                >
+                            <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link">
                                 <div class="col-lg-7" style="display: flex;justify-content: space-between;">
                                     <div class="privacy">
                                         <a href="privacy.html" style="color: #43434b;" target="__blank">
@@ -740,15 +739,16 @@
                             </div>
                             <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
                                 <a href="https://wa.me/+917448390100" style="color: #000;" target="__blank">
-                                    <p class="fontGraphikRegular" style="cursor: pointer;" >+(91) 74483 90100</p>
+                                    <p class="fontGraphikRegular" style="cursor: pointer;">+(91) 74483 90100</p>
                                 </a>
                             </div>
-                            <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
-                                    <p class="fontGraphikRegular" style="border: none; margin-top: 5px;margin-bottom: 5px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                            <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address">
+                                <p class="fontGraphikRegular"
+                                    style="border: none; margin-top: 5px;margin-bottom: 5px;text-align: left;"> 105, South
+                                    West Boag Road, T.Nagar Chennai, India</p>
                             </div>
-                            <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
-                                style="display: flex;justify-content: flex-start; display: none;">
-                                <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                            <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links" style="display: flex;justify-content: flex-start; display: none;">
+                                <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
                                     <samp class="social_icon">
                                     <i class="fa fa-linkedin " aria-hidden="true"></i>
                                     </samp>
@@ -758,7 +758,7 @@
                                     <i class="fa fa-facebook " aria-hidden="true"></i>
                                 </samp>
                                </a>
-                               <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                               <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;">
                                     <samp class="social_icon">
                                         <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
                                     </samp>
@@ -769,23 +769,11 @@
                                 </samp>
                             </a>
                             </div>
-                            <!-- <div class="mob-view"  style="display: flex;justify-content: space-between;display: none; ">
-                                <div class="privacy">
-                                    <a href="privacy.html" style="color: #43434b;" target="__blank">
-                                        <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px auto;font-size: 16px;font-weight: 600;">Privacy</p>
-                                    </a>
-                                </div>
-                                <div class="gdpr">
-                                    <a href="GDPR.html" style="color: #43434b;" target="__blank">
-                                        <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px auto;font-size: 16px;font-weight: 600;">GDPR</p>
-                                    </a>
-                                </div>
-                            </div> -->
+        
                         </div>
-                        
                     </div>
                 </footer>
-        </section>
+            </section>
         <!-- end -->
 </body>
     <script type=“application/ld+json”> 
