--- a/who-we-are.html
+++ b/who-we-are.html
@@ -1166,7 +1166,7 @@
                         </div>
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                             style="display: flex;justify-content: flex-start; display: none;">
-                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
                                 <samp class="social_icon">
                                 <i class="fa fa-linkedin " aria-hidden="true"></i>
                                 </samp>
