--- a/products.html
+++ b/products.html
@@ -123,7 +123,7 @@ input:focus:invalid {
                                <div class="dropdown">
                                    
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
-                                <a id="glossary" href="productdetails.html"> Glossary</a>
+                                <a id="glossary" href="glossary.html"> Glossary</a>
                                </div>
                            </span>
                            <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
@@ -159,7 +159,7 @@ input:focus:invalid {
                <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
                </li>
                <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
-               <li  class="sub-menu"><a href="productdetails.html">Glossary</a></li>
+               <li  class="sub-menu"><a href="glossary.html">Glossary</a></li>
                
                <li class="menu-item"><a href="./contact">Contact</a>
                </li>
