--- a/privacy.html
+++ b/privacy.html
@@ -747,7 +747,7 @@
                     >
                     <div class="col-lg-9 " style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
                         <div class="privacy col-xs-6">
-                            <a href="privacy.html" style="color: #43434b;" class="pri" target="__blank">
+                            <a href="privacy.html" style="color: #43434b;" class="pri1" target="__blank">
                                 <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;font-weight: 600;">Privacy</p>
                             </a>
                         </div>
