--- a/who-we-are.html
+++ b/who-we-are.html
@@ -1128,85 +1128,85 @@
     <!-- end -->
     <!-- footer_social_media -->
     <section class="footer_social_media">
-            <footer>
-                <div class="container">
-                    <div class="row">
-                        <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
-                            <p class="fontLatoBold footer_list"><span>Security</span></p>
-                            <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
-                            <p class="fontLatoBold footer_list"><span>GDPR</span></p>
-                        </div> -->
-                        <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 privacy-gdpr"
-                            >
-                            <div class="col-lg-9 " style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
-                                <div class="privacy col-xs-6">
-                                    <a href="privacy.html" style="color: #43434b;" class="pri" target="__blank">
-                                        <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;font-weight: 600;">Privacy</p>
-                                    </a>
-                                </div>
-                                <div class="gdpr col-xs-6">
-                                    <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
-                                        <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;font-weight: 600;">GDPR</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
-                            <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
-                                <p class="fontGraphikRegular" style="cursor: pointer;">hello@crayond.com</p>
-                            </a>
-                        </div>
-                        <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
-                            <a href="https://wa.me/+917448390100" style="color: #000;" target="__blank">
-                                <p class="fontGraphikRegular" style="cursor: pointer;" >+(91) 74483 90100</p>
-                            </a>
-                        </div>
-                        <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
-                                <p class="fontGraphikRegular" style="border: none; margin-top: 5px;margin-bottom: 5px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
-                        </div>
-                        <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
-                            style="display: flex;justify-content: flex-start; display: none;">
-                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
-                                <samp class="social_icon">
-                                <i class="fa fa-linkedin " aria-hidden="true"></i>
-                                </samp>
-                            </a>
-                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
-                            <samp class="social_icon">
-                                <i class="fa fa-facebook " aria-hidden="true"></i>
-                            </samp>
-                           </a>
-                           <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
-                                <samp class="social_icon">
-                                    <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                                </samp>
-                            </a>
-                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
-                                <samp class="social_icon">
-                                <i class="fa fa-twitter " aria-hidden="true"></i>
-                            </samp>
-                        </a>
-                        </div>
-                        
-                    </div>
-                    </div>
-                    <div class="container " >
-                        <div class="row response-xs" style="display: none;">
-                        <div class="privacy col-sm-6 col-xs-6">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
+                        <p class="fontLatoBold footer_list"><span>Security</span></p>
+                        <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
+                        <p class="fontLatoBold footer_list"><span>GDPR</span></p>
+                    </div> -->
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 privacy-gdpr"
+                    >
+                    <div class="col-lg-5  col-md-7" style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
+                        <div class="privacy col-xs-6">
                             <a href="privacy.html" style="color: #43434b;" class="pri" target="__blank">
-                                <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;font-weight: 600;">Privacy</p>
+                                <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;padding-right:18px;border-right: 1px solid rgba(25, 34, 79, 0.08);">Privacy</p>
                             </a>
                         </div>
-                        <div class="gdpr col-sm-6 col-xs-6">
+                        <div class="gdpr col-xs-6">
                             <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
-                                <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;font-weight: 600;">GDPR</p>
+                                <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                             </a>
-                        </div>
                         </div>
                     </div>
                 </div>
-            </footer>
-    </section>
+                <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                    <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
+                        <p class="fontGraphikRegular" style="cursor: pointer;">hello@crayond.com</p>
+                    </a>
+                </div>
+                <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                    <a href="https://wa.me/+917448390100" style="color: #000;" target="__blank">
+                        <p class="fontGraphikRegular" style="cursor: pointer;" >+(91) 74483 90100</p>
+                    </a>
+                </div>
+                <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
+                        <p class="fontGraphikRegular" style="border: none; margin-top: 5px;margin-bottom: 5px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                </div>
+                <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
+                    style="display: flex;justify-content: flex-start; display: none;">
+                    <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;margin-left: 10px">
+                        <samp class="social_icon">
+                        <i class="fa fa-linkedin " aria-hidden="true"></i>
+                        </samp>
+                    </a>
+                    <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                    <samp class="social_icon">
+                        <i class="fa fa-facebook " aria-hidden="true"></i>
+                    </samp>
+                   </a>
+                   <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                        <samp class="social_icon">
+                            <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                        </samp>
+                    </a>
+                    <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                        <samp class="social_icon">
+                        <i class="fa fa-twitter " aria-hidden="true"></i>
+                    </samp>
+                </a>
+                </div>
+                
+            </div>
+            </div>
+            <div class="container " >
+                <div class="row response-xs" style="display: none;">
+                <div class="privacy col-sm-6 col-xs-6">
+                    <a href="privacy.html" style="color: #43434b;" class="pri1" target="__blank">
+                        <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
+                    </a>
+                </div>
+                <div class="gdpr col-sm-6 col-xs-6">
+                    <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
+                        <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
+                    </a>
+                </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</section>
     <!-- end -->
     </div>     
 </body>
