--- a/contact.html
+++ b/contact.html
@@ -244,7 +244,7 @@
                     </div>
                 </div>
                 <div class = "row footer_social_media1">
-                    <div class = "col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link" style="display: flex;justify-content: flex-start;">
+                    <div class = "col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link" style="display: flex;justify-content: flex-start;margin-left: 14px;">
                         <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
                             <samp class="social_icon">
                              <i class="fa fa-linkedin " aria-hidden="true"></i>
@@ -282,15 +282,15 @@
                         </div> -->
                         <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 privacy-gdpr"
                     >
-                    <div class="col-lg-9 " style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
+                    <div class="col-lg-5 col-md-7" style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
                         <div class="privacy col-xs-6">
                             <a href="privacy.html" style="color: #43434b;" class="pri" target="__blank">
-                                <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;font-weight: 600;">Privacy</p>
+                                <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;padding-right:18px;border-right: 1px solid rgba(25, 34, 79, 0.08);">Privacy</p>
                             </a>
                         </div>
                         <div class="gdpr col-xs-6">
                             <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
-                                <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;font-weight: 600;">GDPR</p>
+                                <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                             </a>
                         </div>
                     </div>
@@ -338,12 +338,12 @@
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
                     <a href="privacy.html" style="color: #43434b;" class="pri" target="__blank">
-                        <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;font-weight: 600;">Privacy</p>
+                        <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
                     <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
-                        <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;font-weight: 600;">GDPR</p>
+                        <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
                 </div>
